--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.password=GsqSCJy5cl
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.data.mongodb.uri=mongodb+srv://mongodbuser:mongodbuserpassword@cluster0.oezgypu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=whatsappdb
